--- a/guides/how-to-choose-an-air-fryer/index.html
+++ b/guides/how-to-choose-an-air-fryer/index.html
@@ -1,1 +1,369 @@
+<!doctype html>
+<html lang="en-US">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <title>How to Choose an Air Fryer: What Matters (Size, Cleanup, Controls) (2026) | KitchenGearLab</title>
+  <meta name="description" content="How to choose an air fryer in 2026: capacity that fits your meals, basket design, cleanup, controls, and the trade-offs that actually change results." />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta name="color-scheme" content="light only" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <link rel="canonical" href="https://kitchengearlab.github.io/guides/how-to-choose-an-air-fryer/" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+
+  <!-- Favicons (root) -->
+  <link rel="icon" href="/favicon.ico" sizes="any" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="KitchenGearLab" />
+  <meta property="og:type" content="article" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:url" content="https://kitchengearlab.github.io/guides/how-to-choose-an-air-fryer/" />
+  <meta property="og:title" content="How to Choose an Air Fryer: What Matters (Size, Cleanup, Controls) (2026)" />
+  <meta property="og:description" content="A practical checklist to choose the right air fryer: capacity, basket layout, cleanup, controls, and real-world trade-offs." />
+  <meta property="og:image" content="https://kitchengearlab.github.io/assets/images/og/how-to-choose-an-air-fryer-og-1200x630.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/webp" />
+  <meta property="og:image:alt" content="Clean kitchen setup with an air fryer and tools arranged for evaluation, in soft natural daylight." />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="How to Choose an Air Fryer: What Matters (Size, Cleanup, Controls) (2026)" />
+  <meta name="twitter:description" content="A practical checklist to choose the right air fryer: capacity, basket layout, cleanup, controls, and real-world trade-offs." />
+  <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/how-to-choose-an-air-fryer-og-1200x630.webp" />
+  <meta name="twitter:image:alt" content="Clean kitchen setup with an air fryer and tools arranged for evaluation, in soft natural daylight." />
+
+  <!-- Performance: Hero preload -->
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/hero/how-to-choose-an-air-fryer-hero-1600x840.webp"
+        imagesrcset="https://kitchengearlab.github.io/assets/images/hero/how-to-choose-an-air-fryer-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/how-to-choose-an-air-fryer-hero-2400x1260.webp 2400w"
+        imagesizes="(max-width: 900px) 100vw, 40vw" />
+
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png" />
+
+  <!-- GA4: connection hints -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+  <link rel="dns-prefetch" href="//www.googletagmanager.com" />
+
+  <!-- ✅ Google Analytics 4 (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNC93WEF7E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PNC93WEF7E', { anonymize_ip: true, send_page_view: true });
+  </script>
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://kitchengearlab.github.io/#organization",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png",
+          "width": 512,
+          "height": 512
+        }
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://kitchengearlab.github.io/#website",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US"
+      },
+      {
+        "@type": "BreadcrumbList",
+        "@id": "https://kitchengearlab.github.io/guides/how-to-choose-an-air-fryer/#breadcrumbs",
+        "itemListElement": [
+          { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://kitchengearlab.github.io/" },
+          { "@type": "ListItem", "position": 2, "name": "Guides", "item": "https://kitchengearlab.github.io/guides/" },
+          { "@type": "ListItem", "position": 3, "name": "How to choose an air fryer", "item": "https://kitchengearlab.github.io/guides/how-to-choose-an-air-fryer/" }
+        ]
+      },
+      {
+        "@type": "Article",
+        "@id": "https://kitchengearlab.github.io/guides/how-to-choose-an-air-fryer/#article",
+        "headline": "How to Choose an Air Fryer: What Matters (Size, Cleanup, Controls) (2026)",
+        "description": "How to choose an air fryer in 2026: capacity that fits your meals, basket design, cleanup, controls, and the trade-offs that actually change results.",
+        "mainEntityOfPage": "https://kitchengearlab.github.io/guides/how-to-choose-an-air-fryer/",
+        "isPartOf": { "@id": "https://kitchengearlab.github.io/#website" },
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US",
+        "datePublished": "2026-02-01",
+        "dateModified": "2026-02-01"
+      }
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header" role="banner">
+    <div class="container">
+      <div class="header-inner">
+        <a class="brand" href="/" aria-label="KitchenGearLab home">
+          <img
+            src="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png"
+            width="32"
+            height="32"
+            alt=""
+            loading="eager"
+            decoding="async"
+          />
+          <span class="brand-text">
+            <span class="brand-name">KitchenGearLab</span>
+            <span class="brand-tagline">Neutral reviews. Practical decisions.</span>
+          </span>
+        </a>
+
+        <nav class="site-nav" aria-label="Primary">
+          <ul class="nav-list">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <main id="main" role="main" tabindex="-1">
+
+    <section class="hero" aria-labelledby="hero-title">
+      <div class="container">
+        <div class="hero-grid">
+
+          <div class="hero-copy">
+            <h1 id="hero-title">How to choose an air fryer</h1>
+
+            <p class="lead">
+              The best air fryer isn’t the most “powerful”.
+              It’s the one that matches your portion sizes, cleans easily, and produces consistent results without daily annoyance.
+            </p>
+
+            <ul class="checklist">
+              <li><strong>Size honestly:</strong> small baskets create endless batches.</li>
+              <li><strong>Cleanup matters:</strong> poor basket design becomes friction fast.</li>
+              <li><strong>Controls:</strong> choose what you’ll actually use daily.</li>
+            </ul>
+
+            <div class="hero-actions" role="group" aria-label="Primary actions">
+              <a class="btn btn-accent" href="/best-air-fryers/">See Best Air Fryers</a>
+              <a class="btn btn-secondary" href="#checklist">Open the checklist</a>
+            </div>
+
+            <p class="micro-note">
+              Related:
+              <a href="/guides/what-is-an-air-fryer/">What is an air fryer?</a> ·
+              <a href="/guides/are-air-fryers-worth-it/">Are they worth it?</a>
+            </p>
+
+            <p class="small">Last updated: 2026-02-01</p>
+          </div>
+
+          <div class="hero-media" aria-label="Hero image">
+            <picture>
+              <source
+                type="image/webp"
+                srcset="https://kitchengearlab.github.io/assets/images/hero/how-to-choose-an-air-fryer-hero-1600x840.webp 1600w,
+                        https://kitchengearlab.github.io/assets/images/hero/how-to-choose-an-air-fryer-hero-2400x1260.webp 2400w"
+                sizes="(max-width: 900px) 100vw, 40vw"
+              />
+              <img
+                src="https://kitchengearlab.github.io/assets/images/hero/how-to-choose-an-air-fryer-hero-1600x840.webp"
+                width="1600"
+                height="840"
+                alt="Clean kitchen setup with an air fryer and tools arranged for evaluation, in soft natural daylight."
+                loading="eager"
+                decoding="async"
+                fetchpriority="high"
+              />
+            </picture>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="checklist" aria-labelledby="checklist-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="checklist-title">A practical checklist</h2>
+          <p class="section-subtitle">What changes results and daily satisfaction the most.</p>
+        </div>
+
+        <div class="cards" role="list">
+          <article class="card" role="listitem">
+            <h3 class="card-title">1) Capacity (the biggest regret factor)</h3>
+            <p class="card-text">
+              Capacity claims can be misleading. What matters is how much food can sit in a single layer with airflow.
+              If you hate batches, size up.
+            </p>
+            <ul>
+              <li><strong>1–2 people:</strong> small to mid can work if you cook modest portions.</li>
+              <li><strong>3–4 people:</strong> mid to large usually saves time.</li>
+              <li><strong>5+ people:</strong> consider large dual-basket or accept batches.</li>
+            </ul>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title">2) Basket layout and airflow</h3>
+            <p class="card-text">
+              Crisp results require airflow to reach the surface. Overcrowding and awkward basket shapes reduce consistency.
+            </p>
+            <ul>
+              <li>Look for a basket that supports a <strong>single layer</strong> for your typical foods.</li>
+              <li>A good crisper plate reduces soggy bottoms and improves browning.</li>
+            </ul>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title">3) Cleanup and residue traps</h3>
+            <p class="card-text">
+              If cleanup is annoying, you’ll stop using it. Simple parts, fewer crevices, and easy access win long-term.
+            </p>
+            <ul>
+              <li>Dishwasher-safe parts help, but design matters more than labels.</li>
+              <li>Coatings should feel durable and clean without scraping.</li>
+            </ul>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title">4) Controls you’ll actually use</h3>
+            <p class="card-text">
+              Presets don’t cook for you. Choose controls that feel effortless: clear time/temp adjustment and readable display.
+            </p>
+            <ul>
+              <li><strong>Simple:</strong> dials can be faster than menu presets.</li>
+              <li><strong>Digital:</strong> great when it’s responsive and readable.</li>
+            </ul>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title">5) Noise, smoke, and kitchen comfort</h3>
+            <p class="card-text">
+              Fans vary. Greasier foods can smoke depending on design and temperature. Comfort matters if you cook often.
+            </p>
+            <ul>
+              <li>If noise bothers you, avoid models known for aggressive fan sound.</li>
+              <li>For fatty foods, airflow and drip design affect smoke levels.</li>
+            </ul>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title">6) Footprint and cabinet clearance</h3>
+            <p class="card-text">
+              Measure before you buy. Some models are tall and can feel awkward under cabinets.
+            </p>
+            <ul>
+              <li>Check width, depth, and lid/pull clearance.</li>
+              <li>If it can’t live on the counter, usage usually drops.</li>
+            </ul>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="section highlight" aria-labelledby="mistakes-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="mistakes-title">Common mistakes to avoid</h2>
+          <p class="section-subtitle">What usually causes “I stopped using it” stories.</p>
+        </div>
+
+        <div class="stack">
+          <ul>
+            <li><strong>Buying too small:</strong> repeated batches become annoying fast.</li>
+            <li><strong>Ignoring cleanup:</strong> residue traps turn cooking into chores.</li>
+            <li><strong>Overfilling:</strong> crowded baskets kill crisp results and consistency.</li>
+            <li><strong>Chasing presets:</strong> the best results come from simple time/temp control.</li>
+          </ul>
+
+          <div class="note">
+            <p class="small" style="margin:0;">
+              If you want a shortcut, start with our shortlist:
+              <a href="/best-air-fryers/">Best Air Fryers</a>.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" aria-labelledby="next-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="next-title">Next steps</h2>
+          <p class="section-subtitle">Use this guide to choose faster.</p>
+        </div>
+
+        <div class="stack">
+          <div class="hero-actions" role="group" aria-label="Next steps">
+            <a class="btn btn-accent" href="/best-air-fryers/">Open: Best Air Fryers</a>
+            <a class="btn btn-secondary" href="/best-air-fryers/ninja-air-fryers/">Open: Ninja Hub</a>
+          </div>
+
+          <div class="note attention">
+            <p class="small" style="margin:0;">
+              Informational only. Product details change over time and performance varies by model and usage.
+            </p>
+          </div>
+
+          <p class="small">Last updated: 2026-02-01</p>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="container">
+      <div class="footer-grid">
+        <div>
+          <p class="footer-name">KitchenGearLab</p>
+          <p class="footer-note">Neutral, test-driven kitchen gear reviews and buying guides.</p>
+        </div>
+
+        <nav aria-label="Footer">
+          <ul class="footer-links">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/disclosure/">Disclosure</a></li>
+            <li><a href="/privacy/">Privacy</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="footer-legal">
+        <p class="small">
+          Affiliate disclosure: Some links may earn a commission. See <a href="/disclosure/">Disclosure</a>.
+        </p>
+        <p class="small">
+          Privacy: <a href="/privacy/">Privacy policy</a>.
+        </p>
+        <p class="small"><span aria-hidden="true">©</span> KitchenGearLab</p>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
