--- a/best-air-fryers/index.html
+++ b/best-air-fryers/index.html
@@ -39,7 +39,7 @@
   <meta name="twitter:title" content="Best Air Fryers (2026) | KitchenGearLab" />
   <meta name="twitter:description" content="A calm, test-driven shortlist with clear trade-offs: capacity, controls, cleanup, and consistency." />
   <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/best-air-fryers-og-1200x630.webp" />
-  <meta name="twitter:image:alt" content="Premium editorial kitchen scene featuring multiple air fryers arranged side-by-side in soft daylight." />
+  <meta name="twitter:image:alt" content="Premiumutil=" content="Premium editorial kitchen scene featuring multiple air fryers arranged side-by-side in soft daylight." />
 
   <!-- Performance: hero preload (update filenames if different) -->
   <link rel="preload" as="image"
@@ -143,7 +143,7 @@
           <ul class="nav-list">
             <li><a href="/guides/">Guides</a></li>
             <li><a href="/best-air-fryers/" aria-current="page">Best Air Fryers</a></li>
-            <li><a href="/ninja-air-fryers/">Ninja Hub</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
           </ul>
         </nav>
       </div>
@@ -307,7 +307,7 @@
             <h3>Want a brand-focused path?</h3>
             <p class="muted">If you’re leaning Ninja, use the hub to understand model families and trade-offs.</p>
             <ul class="link-list">
-              <li><a href="/ninja-air-fryers/">Ninja Air Fryers Hub</a></li>
+              <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Air Fryers Hub</a></li>
               <li><a href="/ninja-vs-philips/">Ninja vs Philips</a></li>
               <li><a href="/ninja-vs-cosori/">Ninja vs Cosori</a></li>
             </ul>
@@ -407,7 +407,7 @@
           <ul class="footer-links">
             <li><a href="/guides/">Guides</a></li>
             <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
-            <li><a href="/ninja-air-fryers/">Ninja Hub</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
             <li><a href="/about/">About</a></li>
             <li><a href="/disclosure/">Disclosure</a></li>
             <li><a href="/privacy/">Privacy</a></li>
