--- a/disclosure/index.html
+++ b/disclosure/index.html
@@ -1,1 +1,243 @@
+<!doctype html>
+<html lang="en-US">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <title>Disclosure (Affiliate & Editorial Policy) | KitchenGearLab</title>
+  <meta name="description" content="Affiliate disclosure and editorial policy for KitchenGearLab. We may earn commissions from qualifying purchases. Informational only." />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta name="color-scheme" content="light only" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <link rel="canonical" href="https://kitchengearlab.github.io/disclosure/" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+
+  <!-- Favicons (root) -->
+  <link rel="icon" href="/favicon.ico" sizes="any" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="KitchenGearLab" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:url" content="https://kitchengearlab.github.io/disclosure/" />
+  <meta property="og:title" content="Disclosure (Affiliate & Editorial Policy) | KitchenGearLab" />
+  <meta property="og:description" content="Affiliate disclosure and editorial policy for KitchenGearLab. We may earn commissions from qualifying purchases." />
+  <meta property="og:image" content="https://kitchengearlab.github.io/assets/images/og/trust-og-1200x630.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/webp" />
+  <meta property="og:image:alt" content="Minimalist editorial trust image with calm, clean shapes and soft daylight." />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Disclosure (Affiliate & Editorial Policy) | KitchenGearLab" />
+  <meta name="twitter:description" content="Affiliate disclosure and editorial policy for KitchenGearLab. We may earn commissions from qualifying purchases." />
+  <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/trust-og-1200x630.webp" />
+  <meta name="twitter:image:alt" content="Minimalist editorial trust image with calm, clean shapes and soft daylight." />
+
+  <!-- Performance: brand preload -->
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png" />
+
+  <!-- GA4: connection hints -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+  <link rel="dns-prefetch" href="//www.googletagmanager.com" />
+
+  <!-- ✅ Google Analytics 4 (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNC93WEF7E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PNC93WEF7E', { anonymize_ip: true, send_page_view: true });
+  </script>
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://kitchengearlab.github.io/#organization",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png",
+          "width": 512,
+          "height": 512
+        }
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://kitchengearlab.github.io/#website",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US"
+      },
+      {
+        "@type": "BreadcrumbList",
+        "@id": "https://kitchengearlab.github.io/disclosure/#breadcrumbs",
+        "itemListElement": [
+          { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://kitchengearlab.github.io/" },
+          { "@type": "ListItem", "position": 2, "name": "Disclosure", "item": "https://kitchengearlab.github.io/disclosure/" }
+        ]
+      },
+      {
+        "@type": "WebPage",
+        "@id": "https://kitchengearlab.github.io/disclosure/#webpage",
+        "url": "https://kitchengearlab.github.io/disclosure/",
+        "name": "Disclosure (Affiliate & Editorial Policy) | KitchenGearLab",
+        "description": "Affiliate disclosure and editorial policy for KitchenGearLab. We may earn commissions from qualifying purchases. Informational only.",
+        "isPartOf": { "@id": "https://kitchengearlab.github.io/#website" },
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US",
+        "breadcrumb": { "@id": "https://kitchengearlab.github.io/disclosure/#breadcrumbs" },
+        "primaryImageOfPage": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/og/trust-og-1200x630.webp",
+          "width": 1200,
+          "height": 630
+        },
+        "mainEntityOfPage": "https://kitchengearlab.github.io/disclosure/",
+        "datePublished": "2026-02-01",
+        "dateModified": "2026-02-01"
+      }
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header" role="banner">
+    <div class="container">
+      <div class="header-inner">
+        <a class="brand" href="/" aria-label="KitchenGearLab home">
+          <img
+            src="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png"
+            width="32"
+            height="32"
+            alt=""
+            loading="eager"
+            decoding="async"
+          />
+          <span class="brand-text">
+            <span class="brand-name">KitchenGearLab</span>
+            <span class="brand-tagline">Neutral reviews. Practical decisions.</span>
+          </span>
+        </a>
+
+        <nav class="site-nav" aria-label="Primary">
+          <ul class="nav-list">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <!-- Breadcrumbs (visible) -->
+  <nav class="breadcrumbs" aria-label="Breadcrumb">
+    <div class="container">
+      <ol class="breadcrumbs-list">
+        <li><a href="/">Home</a></li>
+        <li aria-hidden="true">›</li>
+        <li><span aria-current="page">Disclosure</span></li>
+      </ol>
+    </div>
+  </nav>
+
+  <main id="main" role="main" tabindex="-1">
+
+    <section class="section" aria-labelledby="page-title">
+      <div class="container">
+        <div class="section-head">
+          <h1 id="page-title">Disclosure</h1>
+          <p class="section-subtitle">Affiliate disclosure and editorial policy.</p>
+        </div>
+
+        <div class="stack">
+          <div class="note attention">
+            <p class="small" style="margin:0;">
+              <strong>Affiliate disclosure:</strong> KitchenGearLab may earn a commission when you buy through certain links.
+              This does not increase your price. It helps support testing and publishing.
+            </p>
+          </div>
+
+          <h2>How we make recommendations</h2>
+          <p class="muted">
+            We aim to be calm, practical, and trade-off-first. We focus on usability, results consistency, cleanup friction,
+            and realistic capacity. We avoid hype and we don’t claim a single “best” for everyone.
+          </p>
+
+          <h2>Affiliate relationships</h2>
+          <p class="muted">
+            Some pages include affiliate links. If you click and purchase, we may receive compensation.
+            We do not accept paid placement in exchange for positive coverage, and we do not guarantee rankings for partners.
+          </p>
+
+          <h2>Editorial independence</h2>
+          <ul>
+            <li><strong>We choose what to cover:</strong> topics are selected based on reader needs.</li>
+            <li><strong>We explain trade-offs:</strong> every recommendation has limits.</li>
+            <li><strong>We update:</strong> pages can change when models, pricing, or availability changes.</li>
+          </ul>
+
+          <h2>Informational only</h2>
+          <p class="muted">
+            KitchenGearLab provides general information only. Product details can change and performance varies by model and usage.
+            Always verify current specs and safety guidance from the manufacturer.
+          </p>
+
+          <p class="small">Last updated: 2026-02-01</p>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="container">
+      <div class="footer-grid">
+        <div>
+          <p class="footer-name">KitchenGearLab</p>
+          <p class="footer-note">Neutral, test-driven kitchen gear reviews and buying guides.</p>
+        </div>
+
+        <nav aria-label="Footer">
+          <ul class="footer-links">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/disclosure/" aria-current="page">Disclosure</a></li>
+            <li><a href="/privacy/">Privacy</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="footer-legal">
+        <p class="small">
+          Affiliate disclosure: Some links may earn a commission. See <a href="/disclosure/">Disclosure</a>.
+        </p>
+        <p class="small">
+          Privacy: <a href="/privacy/">Privacy policy</a>.
+        </p>
+        <p class="small"><span aria-hidden="true">©</span> KitchenGearLab</p>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
