--- a/privacy/index.html
+++ b/privacy/index.html
@@ -1,1 +1,267 @@
+<!doctype html>
+<html lang="en-US">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <title>Privacy Policy | KitchenGearLab</title>
+  <meta name="description" content="Privacy policy for KitchenGearLab. Learn what data we collect, how we use it, cookies/analytics, and how to contact us about privacy." />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta name="color-scheme" content="light only" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <link rel="canonical" href="https://kitchengearlab.github.io/privacy/" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+
+  <!-- Favicons (root) -->
+  <link rel="icon" href="/favicon.ico" sizes="any" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="KitchenGearLab" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:url" content="https://kitchengearlab.github.io/privacy/" />
+  <meta property="og:title" content="Privacy Policy | KitchenGearLab" />
+  <meta property="og:description" content="Privacy policy for KitchenGearLab: data collection, cookies/analytics, and how to contact us." />
+  <meta property="og:image" content="https://kitchengearlab.github.io/assets/images/og/trust-og-1200x630.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/webp" />
+  <meta property="og:image:alt" content="Minimalist editorial trust image with calm, clean shapes and soft daylight." />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Privacy Policy | KitchenGearLab" />
+  <meta name="twitter:description" content="Privacy policy for KitchenGearLab: data collection, cookies/analytics, and how to contact us." />
+  <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/trust-og-1200x630.webp" />
+  <meta name="twitter:image:alt" content="Minimalist editorial trust image with calm, clean shapes and soft daylight." />
+
+  <!-- Performance: brand preload -->
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png" />
+
+  <!-- GA4: connection hints -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+  <link rel="dns-prefetch" href="//www.googletagmanager.com" />
+
+  <!-- ✅ Google Analytics 4 (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNC93WEF7E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PNC93WEF7E', { anonymize_ip: true, send_page_view: true });
+  </script>
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://kitchengearlab.github.io/#organization",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png",
+          "width": 512,
+          "height": 512
+        }
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://kitchengearlab.github.io/#website",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US"
+      },
+      {
+        "@type": "BreadcrumbList",
+        "@id": "https://kitchengearlab.github.io/privacy/#breadcrumbs",
+        "itemListElement": [
+          { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://kitchengearlab.github.io/" },
+          { "@type": "ListItem", "position": 2, "name": "Privacy", "item": "https://kitchengearlab.github.io/privacy/" }
+        ]
+      },
+      {
+        "@type": "WebPage",
+        "@id": "https://kitchengearlab.github.io/privacy/#webpage",
+        "url": "https://kitchengearlab.github.io/privacy/",
+        "name": "Privacy Policy | KitchenGearLab",
+        "description": "Privacy policy for KitchenGearLab. Learn what data we collect, how we use it, cookies/analytics, and how to contact us about privacy.",
+        "isPartOf": { "@id": "https://kitchengearlab.github.io/#website" },
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US",
+        "breadcrumb": { "@id": "https://kitchengearlab.github.io/privacy/#breadcrumbs" },
+        "primaryImageOfPage": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/og/trust-og-1200x630.webp",
+          "width": 1200,
+          "height": 630
+        },
+        "mainEntityOfPage": "https://kitchengearlab.github.io/privacy/",
+        "datePublished": "2026-02-01",
+        "dateModified": "2026-02-01"
+      }
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header" role="banner">
+    <div class="container">
+      <div class="header-inner">
+        <a class="brand" href="/" aria-label="KitchenGearLab home">
+          <img
+            src="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png"
+            width="32"
+            height="32"
+            alt=""
+            loading="eager"
+            decoding="async"
+          />
+          <span class="brand-text">
+            <span class="brand-name">KitchenGearLab</span>
+            <span class="brand-tagline">Neutral reviews. Practical decisions.</span>
+          </span>
+        </a>
+
+        <nav class="site-nav" aria-label="Primary">
+          <ul class="nav-list">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <!-- Breadcrumbs (visible) -->
+  <nav class="breadcrumbs" aria-label="Breadcrumb">
+    <div class="container">
+      <ol class="breadcrumbs-list">
+        <li><a href="/">Home</a></li>
+        <li aria-hidden="true">›</li>
+        <li><span aria-current="page">Privacy</span></li>
+      </ol>
+    </div>
+  </nav>
+
+  <main id="main" role="main" tabindex="-1">
+
+    <section class="section" aria-labelledby="page-title">
+      <div class="container">
+        <div class="section-head">
+          <h1 id="page-title">Privacy policy</h1>
+          <p class="section-subtitle">How KitchenGearLab handles data, cookies, and analytics.</p>
+        </div>
+
+        <div class="stack">
+          <div class="note attention">
+            <p class="small" style="margin:0;">
+              <strong>Summary:</strong> We collect basic analytics to understand what content helps readers.
+              We do not sell personal information.
+            </p>
+          </div>
+
+          <h2>What we collect</h2>
+          <ul>
+            <li><strong>Analytics data:</strong> approximate location (city/region), device/browser type, pages viewed, and interactions.</li>
+            <li><strong>Cookies:</strong> may be used by analytics and affiliate partners to measure referrals.</li>
+            <li><strong>Voluntary info:</strong> if you contact us, you share what you type (like your email and message).</li>
+          </ul>
+
+          <h2>How we use data</h2>
+          <ul>
+            <li>Improve content clarity and usefulness.</li>
+            <li>Understand which guides people actually read and where they get stuck.</li>
+            <li>Maintain site security and performance.</li>
+          </ul>
+
+          <h2>Analytics (Google Analytics 4)</h2>
+          <p class="muted">
+            We use Google Analytics 4 (GA4) to measure traffic and content performance. We enable IP anonymization where supported.
+            Analytics data helps us improve pages and keep information updated.
+          </p>
+
+          <h2>Affiliate links</h2>
+          <p class="muted">
+            Some links may be affiliate links. If you click and purchase, we may earn a commission.
+            This does not increase your price. See <a href="/disclosure/">Disclosure</a>.
+          </p>
+
+          <h2>Third parties</h2>
+          <p class="muted">
+            Third-party services (analytics, affiliate networks, or embedded content) may set cookies or collect usage data under their own policies.
+            We recommend reviewing their privacy documentation if you want details.
+          </p>
+
+          <h2>Your choices</h2>
+          <ul>
+            <li>You can limit cookies in your browser settings (note: some site features may be affected).</li>
+            <li>You can use private browsing modes to reduce stored cookies.</li>
+          </ul>
+
+          <h2>Contact</h2>
+          <p class="muted">
+            Privacy questions? Contact us via the details on the <a href="/about/">About</a> page.
+          </p>
+
+          <div class="note attention">
+            <p class="small" style="margin:0;">
+              Informational only. This page is a general summary and not legal advice.
+            </p>
+          </div>
+
+          <p class="small">Last updated: 2026-02-01</p>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="container">
+      <div class="footer-grid">
+        <div>
+          <p class="footer-name">KitchenGearLab</p>
+          <p class="footer-note">Neutral, test-driven kitchen gear reviews and buying guides.</p>
+        </div>
+
+        <nav aria-label="Footer">
+          <ul class="footer-links">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/disclosure/">Disclosure</a></li>
+            <li><a href="/privacy/" aria-current="page">Privacy</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="footer-legal">
+        <p class="small">
+          Affiliate disclosure: Some links may earn a commission. See <a href="/disclosure/">Disclosure</a>.
+        </p>
+        <p class="small">
+          Privacy: <a href="/privacy/">Privacy policy</a>.
+        </p>
+        <p class="small"><span aria-hidden="true">©</span> KitchenGearLab</p>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
