--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
   <link rel="dns-prefetch" href="//www.googletagmanager.com" />
 
-  <!-- ✅ Google Analytics 4 (GA4) -->
+  <!-- Google Analytics 4 (GA4) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNC93WEF7E"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -145,7 +145,6 @@
           <ul class="nav-list">
             <li><a href="/guides/">Guides</a></li>
             <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
-            <!-- ✅ Ninja Hub now goes to /best-air-fryers/ninja-air-fryers/ -->
             <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
           </ul>
         </nav>
@@ -255,12 +254,14 @@
         </div>
 
         <div class="cards" role="list">
+          <!-- ✅ Link fixed: /ninja-vs-philips/ -->
           <article class="card top-pick" role="listitem">
             <h3 class="card-title"><a href="/ninja-vs-philips/">Ninja vs Philips</a></h3>
             <p class="card-text">A calm side-by-side comparison to pick the right style for your kitchen.</p>
             <p class="card-meta"><a class="card-link" href="/ninja-vs-philips/">Compare</a></p>
           </article>
 
+          <!-- ✅ Link fixed: /ninja-vs-cosori/ -->
           <article class="card" role="listitem">
             <h3 class="card-title"><a href="/ninja-vs-cosori/">Ninja vs Cosori</a></h3>
             <p class="card-text">Trade-offs: controls, results consistency, noise, and cleanup.</p>
@@ -351,7 +352,6 @@
           <ul class="footer-links">
             <li><a href="/guides/">Guides</a></li>
             <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
-            <!-- ✅ Footer Ninja Hub updated too -->
             <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
             <li><a href="/about/">About</a></li>
             <li><a href="/disclosure/">Disclosure</a></li>
