--- a/index.html
+++ b/index.html
@@ -254,18 +254,18 @@
         </div>
 
         <div class="cards" role="list">
-          <!-- ✅ Link fixed: /ninja-vs-philips/ -->
+          <!-- ✅ UPDATED: now under /best-air-fryers/ -->
           <article class="card top-pick" role="listitem">
-            <h3 class="card-title"><a href="/ninja-vs-philips/">Ninja vs Philips</a></h3>
+            <h3 class="card-title"><a href="/best-air-fryers/ninja-vs-philips/">Ninja vs Philips</a></h3>
             <p class="card-text">A calm side-by-side comparison to pick the right style for your kitchen.</p>
-            <p class="card-meta"><a class="card-link" href="/ninja-vs-philips/">Compare</a></p>
+            <p class="card-meta"><a class="card-link" href="/best-air-fryers/ninja-vs-philips/">Compare</a></p>
           </article>
 
-          <!-- ✅ Link fixed: /ninja-vs-cosori/ -->
+          <!-- ✅ UPDATED: now under /best-air-fryers/ -->
           <article class="card" role="listitem">
-            <h3 class="card-title"><a href="/ninja-vs-cosori/">Ninja vs Cosori</a></h3>
+            <h3 class="card-title"><a href="/best-air-fryers/ninja-vs-cosori/">Ninja vs Cosori</a></h3>
             <p class="card-text">Trade-offs: controls, results consistency, noise, and cleanup.</p>
-            <p class="card-meta"><a class="card-link" href="/ninja-vs-cosori/">Compare</a></p>
+            <p class="card-meta"><a class="card-link" href="/best-air-fryers/ninja-vs-cosori/">Compare</a></p>
           </article>
 
           <article class="card" role="listitem">
