--- a/privacy/index.html
+++ b/privacy/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Privacy Policy | KitchenGearLab</title>
-  <meta name="description" content="Privacy policy for KitchenGearLab. Learn what data we collect, how we use it, cookies/analytics, and how to contact us about privacy." />
+  <meta name="description" content="Privacy policy for KitchenGearLab. Learn what data we collect, how we use it, cookies/analytics, and your privacy choices." />
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
   <meta name="referrer" content="strict-origin-when-cross-origin" />
   <meta name="color-scheme" content="light only" />
@@ -27,7 +27,7 @@
   <meta property="og:locale" content="en_US" />
   <meta property="og:url" content="https://kitchengearlab.github.io/privacy/" />
   <meta property="og:title" content="Privacy Policy | KitchenGearLab" />
-  <meta property="og:description" content="Privacy policy for KitchenGearLab: data collection, cookies/analytics, and how to contact us." />
+  <meta property="og:description" content="Privacy policy for KitchenGearLab: data collection, cookies/analytics, and privacy choices." />
   <meta property="og:image" content="https://kitchengearlab.github.io/assets/images/og/trust-og-1200x630.webp" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -37,7 +37,7 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Privacy Policy | KitchenGearLab" />
-  <meta name="twitter:description" content="Privacy policy for KitchenGearLab: data collection, cookies/analytics, and how to contact us." />
+  <meta name="twitter:description" content="Privacy policy for KitchenGearLab: data collection, cookies/analytics, and privacy choices." />
   <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/trust-og-1200x630.webp" />
   <meta name="twitter:image:alt" content="Minimalist editorial trust image with calm, clean shapes and soft daylight." />
 
@@ -55,6 +55,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
+    // Privacy-minded configuration (best effort)
     gtag('config', 'G-PNC93WEF7E', { anonymize_ip: true, send_page_view: true });
   </script>
 
@@ -96,7 +97,7 @@
         "@id": "https://kitchengearlab.github.io/privacy/#webpage",
         "url": "https://kitchengearlab.github.io/privacy/",
         "name": "Privacy Policy | KitchenGearLab",
-        "description": "Privacy policy for KitchenGearLab. Learn what data we collect, how we use it, cookies/analytics, and how to contact us about privacy.",
+        "description": "Privacy policy for KitchenGearLab. Learn what data we collect, how we use it, cookies/analytics, and your privacy choices.",
         "isPartOf": { "@id": "https://kitchengearlab.github.io/#website" },
         "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
         "inLanguage": "en-US",
@@ -109,7 +110,7 @@
         },
         "mainEntityOfPage": "https://kitchengearlab.github.io/privacy/",
         "datePublished": "2026-02-01",
-        "dateModified": "2026-02-01"
+        "dateModified": "2026-02-02"
       }
     ]
   }
@@ -160,40 +161,51 @@
   </nav>
 
   <main id="main" role="main" tabindex="-1">
-
     <section class="section" aria-labelledby="page-title">
       <div class="container">
         <div class="section-head">
           <h1 id="page-title">Privacy policy</h1>
-          <p class="section-subtitle">How KitchenGearLab handles data, cookies, and analytics.</p>
+          <p class="section-subtitle">What we measure, what we don’t, and your choices.</p>
         </div>
 
         <div class="stack">
           <div class="note attention">
             <p class="small" style="margin:0;">
-              <strong>Summary:</strong> We collect basic analytics to understand what content helps readers.
-              We do not sell personal information.
+              <strong>Summary:</strong> We use basic analytics to improve content. We do not sell personal information.
             </p>
           </div>
 
+          <h2>Scope</h2>
+          <p class="muted">
+            KitchenGearLab is a content website. We do not offer user accounts and we do not provide a public contact channel.
+            This policy explains what information may be processed when you browse the site.
+          </p>
+
           <h2>What we collect</h2>
           <ul>
-            <li><strong>Analytics data:</strong> approximate location (city/region), device/browser type, pages viewed, and interactions.</li>
-            <li><strong>Cookies:</strong> may be used by analytics and affiliate partners to measure referrals.</li>
-            <li><strong>Voluntary info:</strong> if you contact us, you share what you type (like your email and message).</li>
+            <li><strong>Analytics data:</strong> page views, approximate location (city/region), device/browser type, and interactions (e.g., clicks).</li>
+            <li><strong>Cookies:</strong> may be used by analytics and affiliate partners to measure traffic and referrals.</li>
+          </ul>
+
+          <h2>What we do not collect</h2>
+          <ul>
+            <li>No user accounts or profiles.</li>
+            <li>No direct submission of personal information through forms on this site.</li>
+            <li>No sale of personal information.</li>
           </ul>
 
           <h2>How we use data</h2>
           <ul>
             <li>Improve content clarity and usefulness.</li>
-            <li>Understand which guides people actually read and where they get stuck.</li>
-            <li>Maintain site security and performance.</li>
+            <li>Understand what readers engage with so we can update guides and comparisons.</li>
+            <li>Maintain site security, reliability, and performance.</li>
           </ul>
 
           <h2>Analytics (Google Analytics 4)</h2>
           <p class="muted">
-            We use Google Analytics 4 (GA4) to measure traffic and content performance. We enable IP anonymization where supported.
-            Analytics data helps us improve pages and keep information updated.
+            We use Google Analytics 4 (GA4) to measure site usage and content performance.
+            This helps us understand which pages are useful and where to improve.
+            We configure analytics in a privacy-minded way (for example, IP anonymization where supported).
           </p>
 
           <h2>Affiliate links</h2>
@@ -204,19 +216,19 @@
 
           <h2>Third parties</h2>
           <p class="muted">
-            Third-party services (analytics, affiliate networks, or embedded content) may set cookies or collect usage data under their own policies.
-            We recommend reviewing their privacy documentation if you want details.
+            Third-party services (analytics providers, affiliate networks, or embedded content) may set cookies or process usage data under their own policies.
           </p>
 
           <h2>Your choices</h2>
           <ul>
             <li>You can limit cookies in your browser settings (note: some site features may be affected).</li>
             <li>You can use private browsing modes to reduce stored cookies.</li>
+            <li>You can block analytics scripts using browser settings or extensions.</li>
           </ul>
 
-          <h2>Contact</h2>
+          <h2>Changes to this policy</h2>
           <p class="muted">
-            Privacy questions? Contact us via the details on the <a href="/about/">About</a> page.
+            We may update this policy as the site evolves. When we do, we’ll revise the “Last updated” date below.
           </p>
 
           <div class="note attention">
@@ -225,11 +237,10 @@
             </p>
           </div>
 
-          <p class="small">Last updated: 2026-02-01</p>
+          <p class="small">Last updated: 2026-02-02</p>
         </div>
       </div>
     </section>
-
   </main>
 
   <footer class="site-footer" role="contentinfo">
