--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="KitchenGearLab" />
-  <meta property="og:type" content="article" />
+  <meta property="og:type" content="website" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:url" content="https://kitchengearlab.github.io/about/" />
   <meta property="og:title" content="About KitchenGearLab | How We Review Kitchen Gear" />
@@ -113,7 +113,7 @@
           "height": 630
         },
         "datePublished": "2026-02-01",
-        "dateModified": "2026-02-01"
+        "dateModified": "2026-02-02"
       }
     ]
   }
@@ -152,6 +152,17 @@
     </div>
   </header>
 
+  <!-- Breadcrumbs (visible) -->
+  <nav class="breadcrumbs" aria-label="Breadcrumb">
+    <div class="container">
+      <ol class="breadcrumbs-list">
+        <li><a href="/">Home</a></li>
+        <li aria-hidden="true">›</li>
+        <li><span aria-current="page">About</span></li>
+      </ol>
+    </div>
+  </nav>
+
   <main id="main" role="main" tabindex="-1">
 
     <section class="hero" aria-labelledby="hero-title">
@@ -183,7 +194,7 @@
               <a href="/privacy/">Privacy</a>
             </p>
 
-            <p class="small">Last updated: 2026-02-01</p>
+            <p class="small">Last updated: 2026-02-02</p>
           </div>
 
           <div class="hero-media" aria-label="Hero image">
@@ -240,7 +251,7 @@
       <div class="container">
         <div class="section-head">
           <h2 id="standards-title">Editorial standards</h2>
-          <p class="section-subtitle">How we keep the tone neutral and the advice usable.</p>
+          <p class="section-subtitle">Neutral tone, practical criteria, conservative recommendations.</p>
         </div>
 
         <div class="stack">
@@ -269,7 +280,7 @@
 
         <div class="stack">
           <p class="muted">
-            Our review framework focuses on what you feel in daily use, not just lab-like numbers.
+            Our framework focuses on what you feel in daily use, not just lab-like numbers.
             When we compare products, we prioritize consistency and workflow.
           </p>
 
@@ -278,13 +289,32 @@
             <li><strong>Performance consistency:</strong> repeatability across batches and foods.</li>
             <li><strong>Cleanup:</strong> residue traps, dishwasher practicality, coating realities.</li>
             <li><strong>Capacity & footprint:</strong> real basket space vs counter space.</li>
-            <li><strong>Durability cues:</strong> fit/finish, hinges, basket rails, coating wear signals.</li>
+            <li><strong>Durability cues:</strong> fit/finish, hinges, rails, coating wear signals.</li>
           </ul>
 
           <div class="note">
             <p class="small" style="margin:0;">
               <strong>Example checks:</strong> preheat stability, batch-to-batch crisping consistency, smoke management,
               basket cleanup friction, noise comfort, and storage reality.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" aria-labelledby="privacy-note-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="privacy-note-title">Privacy note</h2>
+          <p class="section-subtitle">No forms, no accounts, no public contact channel.</p>
+        </div>
+
+        <div class="stack">
+          <div class="note">
+            <p class="small" style="margin:0;">
+              This site does not offer user accounts and does not include contact forms or a public inbox.
+              We may use basic analytics to understand what content helps readers.
+              For details, see <a href="/privacy/">Privacy policy</a>.
             </p>
           </div>
         </div>
@@ -311,7 +341,7 @@
             </p>
           </div>
 
-          <p class="small">Last updated: 2026-02-01</p>
+          <p class="small">Last updated: 2026-02-02</p>
         </div>
       </div>
     </section>
@@ -331,7 +361,7 @@
             <li><a href="/guides/">Guides</a></li>
             <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
             <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
-            <li><a href="/about/">About</a></li>
+            <li><a href="/about/" aria-current="page">About</a></li>
             <li><a href="/disclosure/">Disclosure</a></li>
             <li><a href="/privacy/">Privacy</a></li>
           </ul>
