--- a/disclosure/index.html
+++ b/disclosure/index.html
@@ -109,7 +109,7 @@
         },
         "mainEntityOfPage": "https://kitchengearlab.github.io/disclosure/",
         "datePublished": "2026-02-01",
-        "dateModified": "2026-02-01"
+        "dateModified": "2026-02-02"
       }
     ]
   }
@@ -176,24 +176,37 @@
             </p>
           </div>
 
+          <h2>How we earn</h2>
+          <p class="muted">
+            Some pages include affiliate links. If you click and purchase, we may receive compensation from the retailer or network.
+            Compensation can vary by partner and category.
+          </p>
+
+          <h2>What we do not do</h2>
+          <ul>
+            <li><strong>No paid placement:</strong> we don’t sell “top spot” rankings.</li>
+            <li><strong>No sponsored rankings:</strong> partners don’t control our conclusions.</li>
+            <li><strong>No promises:</strong> we don’t guarantee outcomes, savings, or performance for any product.</li>
+          </ul>
+
           <h2>How we make recommendations</h2>
           <p class="muted">
             We aim to be calm, practical, and trade-off-first. We focus on usability, results consistency, cleanup friction,
             and realistic capacity. We avoid hype and we don’t claim a single “best” for everyone.
           </p>
 
-          <h2>Affiliate relationships</h2>
-          <p class="muted">
-            Some pages include affiliate links. If you click and purchase, we may receive compensation.
-            We do not accept paid placement in exchange for positive coverage, and we do not guarantee rankings for partners.
-          </p>
-
           <h2>Editorial independence</h2>
           <ul>
-            <li><strong>We choose what to cover:</strong> topics are selected based on reader needs.</li>
-            <li><strong>We explain trade-offs:</strong> every recommendation has limits.</li>
+            <li><strong>We choose what to cover:</strong> topics are selected based on reader needs and common decision points.</li>
+            <li><strong>We explain trade-offs:</strong> every recommendation has limits and ideal use-cases.</li>
             <li><strong>We update:</strong> pages can change when models, pricing, or availability changes.</li>
           </ul>
+
+          <h2>Pricing and availability</h2>
+          <p class="muted">
+            Prices and availability can change quickly. When we mention price ranges or “good value,” it reflects the context at the time of writing.
+            Always verify the current listing before purchasing.
+          </p>
 
           <h2>Informational only</h2>
           <p class="muted">
@@ -201,7 +214,13 @@
             Always verify current specs and safety guidance from the manufacturer.
           </p>
 
-          <p class="small">Last updated: 2026-02-01</p>
+          <div class="note">
+            <p class="small" style="margin:0;">
+              Related: <a href="/about/">About</a> · <a href="/privacy/">Privacy</a>
+            </p>
+          </div>
+
+          <p class="small">Last updated: 2026-02-02</p>
         </div>
       </div>
     </section>
